// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders matching snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingHorizontal": 24,
        "paddingTop": 80,
        "width": "100%",
      }
    }
    testID="login"
  >
    <Image
      resizeMethod="auto"
      resizeMode="contain"
      source={1}
      style={
        {
          "alignSelf": "center",
          "height": 80,
          "marginBottom": 60,
          "marginTop": 60,
          "tintColor": "#121314",
          "width": 160,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 8,
          "marginTop": 80,
          "rowGap": 8,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoCapitalize="none"
            autoFocus={false}
            editable={true}
            keyboardAppearance="light"
            multiline={false}
            numberOfLines={1}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#686e7d"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              {
                "backgroundColor": "inherit",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "height": 46,
                "letterSpacing": 0,
                "lineHeight": 0,
                "opacity": 1,
              }
            }
            testID="login-password-input"
            value=""
          />
        </View>
        <View
          style={
            {
              "marginLeft": 12,
            }
          }
          testID="textfield-endacccessory"
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
            nativeID="0"
            style={
              [
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 8,
                    "height": 32,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 32,
                  },
                  undefined,
                ]
              }
              testID="device-authentication-icon"
            >
              <SvgMock
                fill="currentColor"
                name="Lock"
                style={
                  [
                    {
                      "color": "#121314",
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "rowGap": 2,
        }
      }
    />
    <View
      pointerEvents="box-none"
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginTop": 4,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="log-in-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Unlock
        </Text>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginVertical": 0,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
        testID="reset-wallet-button"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Forgot password?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "height": 200,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "bottom": -20,
            "height": 300,
            "opacity": 0,
            "pointerEvents": "none",
          },
        ]
      }
      testID="fox-animation-mock"
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Login renders matching snapshot when password input is focused 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingHorizontal": 24,
        "paddingTop": 80,
        "width": "100%",
      }
    }
    testID="login"
  >
    <Image
      resizeMethod="auto"
      resizeMode="contain"
      source={1}
      style={
        {
          "alignSelf": "center",
          "height": 80,
          "marginBottom": 60,
          "marginTop": 60,
          "tintColor": "#121314",
          "width": 160,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 8,
          "marginTop": 80,
          "rowGap": 8,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoCapitalize="none"
            autoFocus={false}
            editable={true}
            keyboardAppearance="light"
            multiline={false}
            numberOfLines={1}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#686e7d"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              {
                "backgroundColor": "inherit",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "height": 46,
                "letterSpacing": 0,
                "opacity": 1,
              }
            }
            testID="login-password-input"
            value="password"
          />
        </View>
        <View
          style={
            {
              "marginLeft": 12,
            }
          }
          testID="textfield-endacccessory"
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
            nativeID="1"
            style={
              [
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 8,
                    "height": 32,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 32,
                  },
                  undefined,
                ]
              }
              testID="device-authentication-icon"
            >
              <SvgMock
                fill="currentColor"
                name="Lock"
                style={
                  [
                    {
                      "color": "#121314",
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "alignSelf": "flex-start",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "rowGap": 2,
        }
      }
    />
    <View
      pointerEvents="box-none"
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginTop": 4,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="log-in-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Unlock
        </Text>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginVertical": 0,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
        testID="reset-wallet-button"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Forgot password?
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "height": 200,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "bottom": -20,
            "height": 300,
            "opacity": 0,
            "pointerEvents": "none",
          },
        ]
      }
      testID="fox-animation-mock"
    />
  </View>
</RCTSafeAreaView>
`;
